# aix

./: .gitignore  ARTIFACT.md  CLAUDE.md  NOTICE.md  PROBLEM.md  PUBLISHING.md  README.md  memo.md  results.tsv  state.json
.github/workflows/: ci.yml
benchmarks/: CERT_CONFUSION.md  COINCIDENCE_BOUND.md  EDIT_PATH_AB.md  FOREIGN_CERTIFY.md  LIVE_3WAY.md  README.md  agent_ab.json  agent_ab.py  agent_ab_measure.py  agent_ab_real.json  agent_ab_real.py  agent_ab_v2.json  agent_ab_v2.py  agent_outputs.json  agent_outputs_all.json  agent_outputs_hard.json  agreement.json  cert_confusion.json  cert_confusion.py  cert_confusion_v2.json  cert_confusion_v2.py  cert_noncell_test.py  coincidence_mc.json  coincidence_mc.py  coincidence_q.json  coincidence_q.py  coincidence_q_enron.json  coincidence_q_enron_v2.json  coincidence_q_euses.json  coincidence_q_euses_v2.json  conformance_v2.json  conformance_v2.py  corpus-envelope.md  corpus_coverage.json  corpus_coverage.py  corpus_stratification.json  cost_breakdown.json  cost_breakdown.py  coverage.json  crosspart-analysis.md  (+55 more)
benchmarks/agent_study/: README.md  agent_outputs_live_careful.json  agent_outputs_live_hasty.json  agent_outputs_perfect.json  agent_outputs_sloppy.json  agent_outputs_v2_fast.json  agent_outputs_v2_mid.json  prep.py  results_live_careful.json  results_live_hasty.json  results_smoke_perfect.json  results_smoke_perfect_postfix.json  results_smoke_sloppy.json  results_v2_fast.json  results_v2_mid.json  score.py  synthetic_agents.py  tasks.json
data/inthewild/: PROVENANCE.md
docs/: AGENT-AB.md  AGREEMENT.md  BASELINE.md  BENCHMARKS.md  COVERAGE.md  FIDELITY.md  NON-BYPASS.md  TEST-COVERAGE.md  THREAT-MODEL.md  census-spec.md  receipt-journal-spec.md
docs/research/: semantic-redundancy-certification.md
docs/specs/: full-catalog-semantics.md  v02-architecture.md
docs/upstream/: FILE-THESE-LINKS.md  ISSUES-TO-FILE.md  PR-GUIDE.md  ironcalc-changes.patch  ironcalc-coverage-report.md  residual-functions-patch.md
experiments/configs/: environment.md  evaluation-contract.md
experiments/dbt/: README.md  adapter_dbt.py  dbt_results.json  demo_dbt.py  inthewild_dbt.py  test_quoted_ident.py
experiments/generality/: README.md  ROUTER.md  adapter_ipynb.py  adapter_sqlite.py  census.json  census.py  composition_coverage.json  composition_coverage.py  core.py  demo_router.py  demo_sqlite.py  demo_sqlite_untrusted.py  guard_measure.json  guard_measure.py  router.py
fixtures/: branch-consolidation.xlsx  claims.xlsx  payroll.xlsx  perf-large.xlsx  planted-defects.json  stock-reconciliation.xlsx
fixtures/crosspart/: cp01.xlsx  cp02.xlsx  cp03.xlsx  cp04.xlsx  cp05.xlsx  cp06.xlsx  cp07.xlsx  cp08.xlsx  cp09.xlsx  cp10.xlsx  inventory.json
fixtures/structural/: full.xlsx  refs.xlsx  table.xlsx
formal/: Checker.lean  CopyEdits.lean  Impossibility.lean  README.md  RefShift.lean  SelfOracle.lean  Tokenizer.lean  corpus_formulas_manifest.json  differential_check.py  extract_corpus_formulas.py  shift_laws.out.txt  shift_laws.py  tokenizer_differential.json  tokenizer_differential.py  tokenizer_differential_prefix_findings.json
harness/: README.md  broker.sh  confined-run.sh
harness/confined-bin/: xlq
paper/: ADVERSARIAL-REVIEW.md  ARXIV-SUBMISSION.md  BUILD.md  build.py  evidence-sheet.md  facts.json  facts.py  motivation-surface-map.md  narrative-arc.md  paper-v2.md  paper-v2.tex  paper-v3-build.md  paper-v3.md  paper-v3.tex  paper.html  paper.md  paper.src.md  paper.tex  write-paper-workflow.js  writing-rationale-matrix.md
paper/sections/: 03-boundary.md
repro/: README.md  gated_phrases.json  verify_claims.py
research-log/: 000-setup.md  001-literature-review.md  001b-decision-archaeology.md  002-claims.md  006-paper-draft.md  010-structural-edits-setup.md  011-structural-edits-literature.md  012-structural-edits-hypothesis.md  013-theory-review-corrected-algebra.md  014-adversarial-review-and-fixes.md  015-sciagent-v2-migration.md  016-inthewild-test-protocol.md  017-inthewild-locked-results.md  018-locked-test-v2-protocol.md  019-locked-test-v2-results.md  progress.md  results.tsv
skills/xlq/: SKILL.md
xlq/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
xlq/data/: excel-functions.txt
xlq/src/: apply.rs  calc.rs  census.rs  certify.rs  diff.rs  hash.rs  inspect.rs  journal.rs  log.rs  main.rs  ooxml.rs  patch.rs  refshift.rs  restructure.rs  structural.rs  testkit.rs  tests_algebra.rs  tests_cache_soundness.rs  tests_corpus_lint.rs  tests_value_faithful.rs  undo.rs  value.rs  verify.rs
xlq/tests/: certify_mangle.rs  certify_mangle_noncell.rs  certify_security.rs  integration.rs  reflexivity.rs
xlq/tests/common/: mod.rs
xlq/tests/fixtures/corpus/: constructs.xlsx  crosssheet.xlsx  names.xlsx  security.xlsx  settings.xlsx  sum_band.xlsx
xlq/tests/fixtures/t1/: macro.xlsm
