[package]
name = "xlq"
version = "0.1.0"
edition = "2021"
description = "Agent-safe transactional runtime for Excel workbooks: inspect, diff, and recalculate .xlsx files with receipts. Read-only commands first; typed dry-run writes to follow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wmhy/xlq"

[dependencies]
# Pinned exactly: the "ironcalc 0.7.1" engine/provenance strings emitted by
# inspect/calc (and recorded in receipts) must match the linked engine. A
# caret requirement would let `cargo update` silently falsify them. Bump the
# pin and those constants together (xlq/src/calc.rs ENGINE, xlq/src/inspect.rs).
ironcalc = "=0.7.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
# Used solely to restore the default SIGPIPE disposition in main() (Rust's
# runtime sets SIG_IGN). Already resolved transitively via zip/ironcalc, so this
# adds zero new crates — it only makes libc::SIGPIPE/SIG_DFL nameable.
libc = "0.2"

[[bin]]
name = "xlq"
path = "src/main.rs"

[[bin]]
name = "xlq-fixtures"
path = "src/bin/xlq_fixtures.rs"

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"

[[bin]]
name = "coverage-probe"
path = "src/bin/coverage_probe.rs"

[[bin]]
name = "load-only"
path = "src/bin/load_only.rs"

[[bin]]
name = "oracle-compare"
path = "src/bin/oracle_compare.rs"

[profile.release]
lto = true
strip = true

[patch.crates-io]
ironcalc = { path = "../vendor/upstream/xlsx" }
ironcalc_base = { path = "../vendor/upstream/base" }
