[package]
name = "xlq"
version = "0.2.0"
edition = "2021"
description = "Agent-safe transactional runtime for Excel workbooks: inspect, diff, recalculate, and surgically edit .xlsx files with receipts, an undo journal, and byte-fidelity guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wms2537/aix"
readme = "README.md"
keywords = ["xlsx", "excel", "spreadsheet", "diff", "recalc"]
categories = ["command-line-utilities", "parsing"]
# Only the files needed to build + test the published crate ship in the package;
# the dev/bench binaries' sources ride along harmlessly (gated behind `devtools`).
include = [
    "src/**/*.rs",
    "data/excel-functions.txt",
    "tests/**/*.rs",
    "tests/fixtures/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "NOTICE.md",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
# Pinned exactly: the "ironcalc 0.7.1" engine/provenance strings emitted by
# inspect/calc (and recorded in receipts) must match the linked engine. A
# caret requirement would let `cargo update` silently falsify them. Bump the
# pin and those constants together (xlq/src/calc.rs ENGINE, xlq/src/inspect.rs).
ironcalc = "=0.7.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
# Used solely to restore the default SIGPIPE disposition in main() (Rust's
# runtime sets SIG_IGN). Already resolved transitively via zip/ironcalc, so this
# adds zero new crates — it only makes libc::SIGPIPE/SIG_DFL nameable.
libc = "0.2"

# The five dev/bench tools are gated behind a non-default `devtools` feature via
# required-features, so `cargo install` / `cargo publish` ship ONLY the `xlq`
# binary. The full test suite (including the xlq-fixtures generator) runs under
# `cargo test --features devtools`; a bare `cargo test` runs unit + direct-fixture
# tests only. Run a dev tool with e.g. `cargo run --features devtools --bin roundtrip`.
[features]
devtools = []

[[bin]]
name = "xlq"
path = "src/main.rs"

[[bin]]
name = "xlq-fixtures"
path = "src/bin/xlq_fixtures.rs"
required-features = ["devtools"]

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"
required-features = ["devtools"]

[[bin]]
name = "coverage-probe"
path = "src/bin/coverage_probe.rs"
required-features = ["devtools"]

[[bin]]
name = "load-only"
path = "src/bin/load_only.rs"
required-features = ["devtools"]

[[bin]]
name = "oracle-compare"
path = "src/bin/oracle_compare.rs"
required-features = ["devtools"]

[profile.release]
lto = true
strip = true

[patch.crates-io]
ironcalc = { path = "../vendor/upstream/xlsx" }
ironcalc_base = { path = "../vendor/upstream/base" }
