[package]
name = "xlq"
version = "0.2.0"
edition = "2021"
description = "Agent-safe transactional runtime for Excel workbooks: inspect, diff, recalculate, and surgically edit .xlsx files with receipts, an undo journal, and byte-fidelity guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wms2537/aix"
readme = "README.md"
keywords = ["xlsx", "excel", "spreadsheet", "diff", "recalc"]
categories = ["command-line-utilities", "parsing"]
# Only the files needed to build + test the published crate ship in the package;
# the dev/bench binaries' sources ride along harmlessly (gated behind `devtools`).
include = [
    "src/**/*.rs",
    "data/excel-functions.txt",
    "tests/**/*.rs",
    "tests/fixtures/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "NOTICE.md",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
# Vendored, locally-hardened engine (see vendor/PATCHES.md), consumed as the
# renamed publishable package `xlq-ironcalc` via the multiple-locations pattern:
# the local ../vendor path is used for dev builds; `version = "=0.7.1"` of
# xlq-ironcalc from crates.io is used when THIS crate is published (cargo strips
# the path on publish). The local alias stays `ironcalc`, so `use ironcalc::…` and
# the ENGINE_PROVENANCE const are unchanged. Pinned exactly so the engine/
# provenance strings can never be silently falsified by `cargo update`.
ironcalc = { package = "xlq-ironcalc", path = "../vendor/upstream/xlsx", version = "=0.7.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
# Used solely to restore the default SIGPIPE disposition in main() (Rust's
# runtime sets SIG_IGN). Already resolved transitively via zip/ironcalc, so this
# adds zero new crates — it only makes libc::SIGPIPE/SIG_DFL nameable.
libc = "0.2"

# The five dev/bench tools are gated behind a non-default `devtools` feature via
# required-features, so `cargo install` / `cargo publish` ship ONLY the `xlq`
# binary. The full test suite (including the xlq-fixtures generator) runs under
# `cargo test --features devtools`; a bare `cargo test` runs unit + direct-fixture
# tests only. Run a dev tool with e.g. `cargo run --features devtools --bin roundtrip`.
[features]
devtools = []

[[bin]]
name = "xlq"
path = "src/main.rs"

[[bin]]
name = "xlq-fixtures"
path = "src/bin/xlq_fixtures.rs"
required-features = ["devtools"]

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"
required-features = ["devtools"]

[[bin]]
name = "coverage-probe"
path = "src/bin/coverage_probe.rs"
required-features = ["devtools"]

[[bin]]
name = "load-only"
path = "src/bin/load_only.rs"
required-features = ["devtools"]

[[bin]]
name = "oracle-compare"
path = "src/bin/oracle_compare.rs"
required-features = ["devtools"]

[[bin]]
name = "corpus-gen"
path = "src/bin/corpus_gen.rs"
required-features = ["devtools"]

[profile.release]
lto = true
strip = true

# No [patch.crates-io] is needed: the engine dependency above names the vendored
# fork directly (package + local path + version), so it resolves from ../vendor
# for dev builds and from crates.io (the published xlq-ironcalc) when this crate
# is published. See PUBLISHING.md.
